# Minecraft001

./: .clangd  .gitignore  Block.gd  CMakeLists.txt  Chunk.gd  Chunk.tscn  Global.gd  SConstruct  export_presets.cfg  gdexample.gdextension_  icon.svg.import  player.gd  player.tscn  project.godot  world.gd  world.tscn
game/: Chunk.gd  Global.gd  export_presets.cfg  player.gd  player.tscn  project.godot  world.gd  world.tscn
game/sprites/blocks/: atlas.png.import  atlas_material.tres  atlashd.pxo  azalea_top.png.import  grass_block_side.png.import  moss_block.png.import
octree/: CMakeLists.txt
sprites/blocks/: atlas.pxo  atlas.tres  atlashd.png.import  dirt.png.import  stone.png.import
src/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Chunk.os  register_types.cpp  register_types.h  register_types.os
